# jupyter-notebook

./: README.md  pyproject.toml  requirements.txt
content/demo/: cloudflare-workers-ai.ipynb
