[project]
name = "jupyter-notebook"
version = "0.1.0"
description = "My personal jupyter notebook"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bqplot>=0.12.43",
    "ipycanvas>=0.13.3",
    "ipyevents>=2.0.2",
    "ipyleaflet>=0.19.2",
    "ipympl>=0.9.4",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.2",
    "jupyterlab-fasta>=3.3.0",
    "jupyterlab-filesystem-access>=0.6.0",
    "jupyterlab-geojson>=3.4.0",
    "jupyterlab-night>=0.4.6",
    "jupyterlite-core>=0.4.5",
    "jupyterlite-javascript-kernel>=0.3.0",
    "jupyterlite-p5-kernel>=0.1.1",
    "jupyterlite-pyodide-kernel>=0.4.4",
    "jupyterlite-xeus>=2.1.2",
    "jupyterlite-xeus-lua>=0.3.3",
    "jupyterlite-xeus-sqlite>=0.2.1",
    "notebook>=7.3.1",
    "plotly>=5.24.1",
]
